[gd_scene load_steps=14 format=1]

[ext_resource path="res://scenes/character/player/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/DCM/dcm.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/player/hero.png" type="Texture" id=3]
[ext_resource path="res://sprites/DCM/dcm.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 13.7101
height = 21.9978

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 16.8551
height = 32.7578

[sub_resource type="Animation" id=7]

resource/name = "action"
length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4 ),
"transitions": FloatArray( 1, 1, 2.73208 ),
"update": 1,
"values": [ 24, 25, 26 ]
}

[sub_resource type="Animation" id=5]

resource/name = "fall"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=8]

resource/name = "hit"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=3]

resource/name = "idle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.7 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]

resource/name = "jump"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 12, 12 ]
}

[sub_resource type="Animation" id=9]

resource/name = "recharg"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=4]

resource/name = "walk"
length = 1.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[node name="player" type="KinematicBody2D" groups=[
"player",
]]

transform/scale = Vector2( 0.9, 0.9 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
MAX_SPEED = 200.0
ACCELERATION = 500.0
DECELERATION = 2000
JUMP_FORCE = 600.0
GRAVITY = 2000
MAX_FALL_SPEED = 1000
preview_ingame = false
preview_line_lenght = 5
preview_line_count = 10
anim_path = NodePath("anim")
on_air = false
sprite_path = NodePath("sprite")
sprite_dcm_path = NodePath("sprite/dcm")
is_trigger = false
raycast_d_path = NodePath("raycast_d")
raycast_h_path = NodePath("raycast_h")
raycast_r_path = NodePath("raycast_r")
raycast_l_path = NodePath("raycast_l")
can_use_tp = true
dcm_scene = ExtResource( 2 )
dcm_active = false
dcm_spawn_path = NodePath("dcm_spawn")
bullet_gravity = 5
bullet_speed = 8
bullet_angle = 340.0
shooting = false
canShoot = true
dcm_direction = 1

[node name="sprite" type="Sprite" parent="."]

editor/display_folded = true
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
vframes = 5
hframes = 6
frame = 26

[node name="dcm" type="Sprite" parent="sprite"]

transform/pos = Vector2( -1.48148, 2.22222 )
transform/scale = Vector2( 0.0666667, 0.0666667 )
texture = ExtResource( 4 )
hframes = 2

[node name="collision" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="dcm_spawn" type="Position2D" parent="."]

transform/pos = Vector2( 20.0584, -24.375 )

[node name="area" type="Area2D" parent="." groups=[
"player",
]]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -1.05408, -0.125 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="collision_trigger" type="CollisionShape2D" parent="area"]

visibility/visible = false
transform/pos = Vector2( -1.05408, -0.125 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="camera" type="Camera2D" parent="."]

transform/pos = Vector2( 0, 1 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.5, 0.5 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 10.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
__meta__ = {
"_edit_lock_": true
}

[node name="raycast_d" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 0, 27 )
layer_mask = 1
type_mask = 15

[node name="raycast_h" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 0, -30 )
layer_mask = 1
type_mask = 15

[node name="raycast_r" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 17, 0 )
layer_mask = 1
type_mask = 15

[node name="raycast_l" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( -17, 0 )
layer_mask = 1
type_mask = 15

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/action = SubResource( 7 )
anims/fall = SubResource( 5 )
anims/hit = SubResource( 8 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 6 )
anims/recharg = SubResource( 9 )
anims/walk = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="body_enter" from="area" to="." method="_on_area_body_enter"]

[connection signal="body_exit" from="area" to="." method="_on_area_body_exit"]


